# Coddy-V2

./: cleanup_script.py  diagnose_imports.py  requirements.txt  test_import.py
Coddy/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  RECENT_CHANGELOG.md  TODO_STUBS.md  __init__.py  cli.py  conftest.py  dashboard.py  dashboard_api.py  dashboard_helpers.py  field_image_prompt.txt  funny_clock.py  funny_clock_updated.py  funny_message_generator.py  funny_time_quotes.py  generated_ui.py  gui.py  logging_utility.py  main.py  my_file.py  new_file_from_dashboard.txt  potato_image_prompt.txt  potato_message_generator.py  pyproject.toml  roadmap.md  sample_module.py  test_funny_clock.py  test_funny_time_quotes.py  test_script.py
Coddy/api/: __init__.py  main.py
Coddy/backend/: main.py  package-lock.json  package.json  server.js  services.py
Coddy/core/: __init__.py  autonomous_agent.py  changelog_generator.py  code_generator.py  config.py  constants.py  execution_manager.py  file_watcher.py  git_analyzer.py  idea_synth.py  llm_provider.py  logging_utility.py  memory_service.py  my_coding_flow.vibe  my_first_vibe.vibe  pattern_oracle.py  plugin_manager.py  roadmap_manager.py  stub_auto_generator.py  task_decomposition_engine.py  ui_generator.py  user_profile.py  utility_functions.py  utils.py  vibe_mode.py  websocket_server.py
Coddy/data/: my_notes.txt
Coddy/docs/: coddy_setup.py  creating_plugins.md  shell_integration.md  walkthrough-script.md
Coddy/models/: user_profile_model.py
Coddy/tests/: integration_refactor_test.py  test_all.py  test_api.py  (+14 more)
(+32 files in other folders)
